--- a/DL/深度学习的数学.md
+++ b/DL/深度学习的数学.md
@@ -12,7 +12,7 @@
 
 ### 抽象化的神经元neuron成为神经单元unit
 
-### 点火：y = u(w1x1+w2x2+w3x3-theta), u称为单位阶跃函数 --> 激活函数，著名的是Sigmoid函数
+### 点火：y = u(w1x1+w2x2+w3x3-θ), u称为单位阶跃函数 --> 激活函数，著名的是Sigmoid函数
 
 ## 1.4 什么是神经网络
 
@@ -48,6 +48,78 @@
 ### 奇点(singularity)：表示人工智能超过人类智能的时间点
 
 # 2. 神经网络的数学基础
+
+## 2.1 神经网络所需的函数
+
+### 一次函数 y=ax+b
+
+### 二次函数
+
+### 单位阶跃函数
+
+### 指数函数和Sinmoid函数
+
+### 正态分布的概率密度函数
+
+## 2.2 有助于理解神经网络的数列和递推关系式
+
+### 数列的通项公式
+
+#### 将数列的第n项用一个关于n的式子表示出来，这个式子就是通项公式
+
+### 数列与递推关系式
+
+#### 已知首项a1以及相邻两项An, An+1的关系式，就可以确定这个数列，这个关系式就是递推关系式
+
+### 联立递推关系式
+
+#### 将多个数列的递推关系式联合起来组成一组
+
+## 2.3 神经网络中经常用到的Σ符号
+
+### Σ符号具有线性性质
+
+## 2.4 有助于理解神经网络的向量基础
+
+### 向量的定义：具有大小和方向的量，用箭头表示
+
+### 向量的大小：表示向量的箭头的长度
+
+### 向量的内积：a*b = |a|*|b|*cosθ
+
+#### 表示两个向量在多大程度上指向相同方向
+
+### 柯西-施瓦茨不等式
+
+#### -|a||b|<=a*b>=|a||b|
+
+### 内积的坐标表示
+
+#### a=(a1,a2), b=(b1,b2), then a*b = a1b1+a2b2
+
+#### a=(a1,a2,a3), b=(b1,b2,b3), then a*b = a1b1+a2b2+a3b3
+
+### 向量的一般化
+
+### 张量tensor
+
+#### 向量概念的推广
+
+## 2.5 有助于理解神经网络的矩阵基础
+
+## 2.6 神经网络的导数基础
+
+## 2.7 神经网络的偏导数基础
+
+## 2.8 误差反向传播法必需的链式法则
+
+## 2.9 梯度下降法的基础：多变量函数的近似公式
+
+## 2.10 梯度下降法的含义和公式
+
+## 2.11 用Excel体验梯度下降法
+
+## 2.12 最优化问题和回归分析
 
 # 3. 神经网络的最优化
 
