--- a/DL/深度学习的数学.md
+++ b/DL/深度学习的数学.md
@@ -107,15 +107,71 @@
 
 ## 2.5 有助于理解神经网络的矩阵基础
 
+### 矩阵的乘法不满足交换律
+
+### Hadamard乘积：相同形状的矩阵A,B，将相同位置的元素相乘产生的矩阵
+
+### 转置矩阵Transposed Matrix：将矩阵A的第i行第j列的元素与第j行第i列的元素交换产生的矩阵
+
 ## 2.6 神经网络的导数基础
 
-## 2.7 神经网络的偏导数基础
+### 已知函数f(x)，求导函数f'(x)，称为对函数f(x)求导，当导数的值存在时，称函数可导
+
+### 在平面直角坐标系中，f'(x)表示曲线的某点的切线的斜率
+
+### 导数的线性性（和的导数为导数的和，常数倍的导数是导数的常数倍），是后面的误差反向传播法背后的主角
+ (see:4.3 神经网络和误差反向传播法)
+### 分数函数的导数和Sigmoid函数的导数
+
+### 当f(x)在x=a处取最小值时，该函数在该点的切线的斜率（即导函数的值）为0
+
+#### f'(a)=0是函数f(x)在x=a处取得最小值的必要条件
+
+## 2.7 神经网络的偏导数基础（多变量函数）
+
+### 对多变量函数求导，由于有多个变量，必须指明对哪一个变量进行求导，关于某个特定变量的导数称为偏导数(partial derivative)
+
+### 多变量函数的最小值条件
+
+#### 拉格朗日乘数法
 
 ## 2.8 误差反向传播法必需的链式法则
 
+### 神经网络和复合函数
+
+#### 复合函数：嵌套结构的函数f(g(x))称为f(u)和g(x)的复合函数
+
+### 单变量函数的链式法则
+
+#### 复合函数的导数可以像分数一样使用约分
+
+#### 注意：这个约分的法则不适用于dx，dy的平方等情形
+
+### 多变量函数的链式法则
+
+#### 变量z为u,v的函数，u,v分别为x,y的函数，z关于x求导时，先对u,v求导，然后与z的相应导数相乘，最后将乘积加起来
+
 ## 2.9 梯度下降法的基础：多变量函数的近似公式
 
+### 梯度下降法时确定神经网络的一种代表性的方法，使用时要用到多变量函数的近似公式
+
+### 单变量函数的近似公式
+
+### 多变量函数的近似公式
+
+### 近似公式的向量表示
+
+#### 泰勒展开式：近似公式的一般化公式
+
 ## 2.10 梯度下降法的含义和公式
+
+### 应用数学最重要的任务之一就是寻找函数取最小值的点
+
+#### 著名的找最小值的点的方法--梯度下降法
+
+### 梯度下降法的思路
+
+#### 在函数取最小值的点的附件，函数的增量为0（必要条件）
 
 ## 2.11 用Excel体验梯度下降法
 
@@ -123,6 +179,24 @@
 
 # 3. 神经网络的最优化
 
+## 3.1 神经网络的参数和变量
+
+## 3.2 神经网络的变量的关系式
+
+## 3.3. 学习数据和正解
+
+## 3.4 神经网络的代价函数
+
+## 3.5 用Excel体验神经网络
+
 # 4. 神经网络和误差反向传播法
+
+## 4.1 梯度下降法的回顾
+
+## 4.2 神经单元误差
+
+## 4.3 神经网络和误差反向传播法
+
+## 4.4 用Excel体验神经网络的误差反向传播法
 
 # 5. 深度学习和卷积神经网络
