--- a/DL/深度学习的数学.md
+++ b/DL/深度学习的数学.md
@@ -173,6 +173,20 @@
 
 #### 在函数取最小值的点的附件，函数的增量为0（必要条件）
 
+#### 数值分析领域，梯度下降法也称为最速下降法
+
+### 近似公式和内积的关系
+
+#### z=f(x,y), z的近似变化可以表示为两个向量的内积，这是梯度下降法的出发点
+
+#### 当向量b满足b = -ka时，使得内积a.b取最小值，这是梯度下降法的数学基础
+
+### 二变量函数的梯度下降法的基本式
+
+### 梯度下降法及其用法
+
+### 哈密顿算子 nabla
+
 ## 2.11 用Excel体验梯度下降法
 
 ## 2.12 最优化问题和回归分析
