finish chapter 2's learning

--- a/DL/深度学习的数学.md
+++ b/DL/深度学习的数学.md
@@ -191,6 +191,24 @@
 
 ## 2.12 最优化问题和回归分析
 
+### 从数学上来说，确定神经网络的参数是一个最优化问题，具体就是对神经网络的参数（即权重和偏置）进行拟合，使得神经网络的输出与实际数据相吻合
+
+### 回归分析
+
+#### 由多个变量组成的数据中，着眼于其中一个特定的变量，用其余的变量来解释这个特定的变量的方法
+
+#### 一元线性回归分析是以两个变量组成的数据为参考对象的
+
+##### 用一条直线近似地表示散点图上的点列，通过该直线的方程来考察两个变量的关系的方法；这条近似地直线称为回归直线
+
+### 代价函数 cost function
+
+#### 利用平方误差的总和CT进行最优化的方法叫做最小二乘法
+
+### 模型参数的个数
+
+#### 要确定模型，就必须准备好规模大于参数个数的数据
+
 # 3. 神经网络的最优化
 
 ## 3.1 神经网络的参数和变量
