--- a/DL/深度学习的数学.md
+++ b/DL/深度学习的数学.md
@@ -215,8 +215,14 @@
 
 ## 3.2 神经网络的变量的关系式
 
+### 神经网络的变量的矩阵表示
+
 ## 3.3. 学习数据和正解
 
+### 回归分析的学习数据和正解
+
+#### 利用事先提供的数据（学习数据）来确定权重和偏置，这在神经网络中称为学习
+ (see:1.7 网络自学习的神经网络)
 ## 3.4 神经网络的代价函数
 
 ## 3.5 用Excel体验神经网络
