--- a/ML/PythonMLBasic/ch1/iris.ipynb
+++ b/ML/PythonMLBasic/ch1/iris.ipynb
@@ -191,6 +191,88 @@
     "# 下面是前5个样本的特征数值\n",
     "print(\"First 5 rows of data:\\n{}\".format(iris_dataset['data'][:5]))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "729ee881",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Type of target: <class 'numpy.ndarray'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# target数组包含的是测量过的每朵花的品种，也是一个NumPy数组\n",
+    "print(\"Type of target: {}\".format(type(iris_dataset['target'])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "978cbbca",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape of target: (150,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# target是一个一维数组，每朵花对应其中一个数据\n",
+    "print(\"Shape of target: {}\".format(iris_dataset['target'].shape))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "ac31f887",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Target:\n",
+      "[0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1\n",
+      " 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 2 2 2 2 2 2 2 2 2 2\n",
+      " 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2\n",
+      " 2 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 品种被转换为从0到2的整数\n",
+    "print(\"Target:\\n{}\".format(iris_dataset['target']))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8d1d6b56",
+   "metadata": {},
+   "source": [
+    "上述数字的代表含义由`iris['target_names']`数组给出：\n",
+    "- 0: setosa 丝状\n",
+    "- 1: versicolor 杂色\n",
+    "- 2: virginica 维吉尼亚\n",
+    "（意大利语）"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "486e75c9",
+   "metadata": {},
+   "source": [
+    "## 1.7.2 衡量模型是否成功：训练数据与测试数据"
+   ]
   }
  ],
  "metadata": {
