--- a/ML/PythonMLBasic/ch1/iris.ipynb
+++ b/ML/PythonMLBasic/ch1/iris.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "9fdd7abd",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 35,
    "id": "fef26fa0",
    "metadata": {},
    "outputs": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 36,
    "id": "ed69a644",
    "metadata": {},
    "outputs": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 37,
    "id": "a055a092",
    "metadata": {},
    "outputs": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "f5e1486d",
    "metadata": {},
    "outputs": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 39,
    "id": "c6af37f6",
    "metadata": {},
    "outputs": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 40,
    "id": "7c55c010",
    "metadata": {},
    "outputs": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 41,
    "id": "2bef7e94",
    "metadata": {},
    "outputs": [
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 42,
    "id": "729ee881",
    "metadata": {},
    "outputs": [
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 43,
    "id": "978cbbca",
    "metadata": {},
    "outputs": [
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 44,
    "id": "ac31f887",
    "metadata": {},
    "outputs": [
@@ -271,7 +271,66 @@
    "id": "486e75c9",
    "metadata": {},
    "source": [
-    "## 1.7.2 衡量模型是否成功：训练数据与测试数据"
+    "## 1.7.2 衡量模型是否成功：训练数据与测试数据\n",
+    "\n",
+    "我们需要用新数据来评估模型的性能。新数据是指模型之前没有见过的数据，而我们有这些新数据的标签。\n",
+    "\n",
+    "通常的做法是将收集好的带标签数据（这个鸢尾花数据集是150朵花的测量数据）分成两个部分：\n",
+    "- 一部分数据用于构建机器学习模型，叫作**训练数据(training data)**或**训练集(training set)**\n",
+    "- 其余的数据用来评估模型性能，叫作**测试数据(test data)**、**测试集(test set)**或**留出集(hold-out set)**\n",
+    "\n",
+    "scikit-learn中的`train_test_split`函数可以打乱数据集并进行拆分，将75%的行数据及对应标签作为训练集，剩下25%的数据及其标签作为测试集。（训练集和测试集的分配比例可以是随意的，但使用25%的数据作为测试集是很好的经验法则）。\n",
+    "\n",
+    "scikit-learn中的数据通常用大写的`X`表示，而标签用小写的`y`表示。这是受到了数学标准公式`f(x)=y`的启发，其中`X`是函数的输入，`y`是输出。\n",
+    "\n",
+    "我们用大写的`X`是因为数据是一个二维数组（矩阵），用小写的`y`是因为目标是一个一维数组（向量）。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "d208f027",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 对数据调用train_test_split，并对输出结果采用如下命名方法：\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(iris_dataset['data'], iris_dataset['target'], random_state=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "11bd9be1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X_train shape: (112, 4)\n",
+      "y_train shape: (112,)\n",
+      "X_test shape: (38, 4)\n",
+      "y_test shape: (38,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# train_test_split函数的输出为X_train, X_test, y_train, y_test，它们都是NumPy数组。\n",
+    "# X_train包含75%的行数据，X_test包含剩下的25%\n",
+    "print(\"X_train shape: {}\".format(X_train.shape))\n",
+    "print(\"y_train shape: {}\".format(y_train.shape))\n",
+    "\n",
+    "print(\"X_test shape: {}\".format(X_test.shape))\n",
+    "print(\"y_test shape: {}\".format(y_test.shape))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1a92dbc5",
+   "metadata": {},
+   "source": [
+    "## 1.7.3 要事第一：观察数据"
    ]
   }
  ],
