--- a/ML/PythonMLBasic/ch1/iris.ipynb
+++ b/ML/PythonMLBasic/ch1/iris.ipynb
@@ -440,14 +440,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "2edbf4ab",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "KNeighborsClassifier(n_neighbors=1)\n"
+     ]
+    },
+    {
      "data": {
       "text/html": [
-       "<style>#sk-container-id-2 {\n",
+       "<style>#sk-container-id-3 {\n",
        "  /* Definition of color scheme common for light and dark mode */\n",
        "  --sklearn-color-text: #000;\n",
        "  --sklearn-color-text-muted: #666;\n",
@@ -464,7 +471,7 @@
        "  --sklearn-color-fitted-level-3: cornflowerblue;\n",
        "}\n",
        "\n",
-       "#sk-container-id-2.light {\n",
+       "#sk-container-id-3.light {\n",
        "  /* Specific color for light theme */\n",
        "  --sklearn-color-text-on-default-background: black;\n",
        "  --sklearn-color-background: white;\n",
@@ -472,22 +479,22 @@
        "  --sklearn-color-icon: #696969;\n",
        "}\n",
        "\n",
-       "#sk-container-id-2.dark {\n",
+       "#sk-container-id-3.dark {\n",
        "  --sklearn-color-text-on-default-background: white;\n",
        "  --sklearn-color-background: #111;\n",
        "  --sklearn-color-border-box: white;\n",
        "  --sklearn-color-icon: #878787;\n",
        "}\n",
        "\n",
-       "#sk-container-id-2 {\n",
+       "#sk-container-id-3 {\n",
        "  color: var(--sklearn-color-text);\n",
        "}\n",
        "\n",
-       "#sk-container-id-2 pre {\n",
+       "#sk-container-id-3 pre {\n",
        "  padding: 0;\n",
        "}\n",
        "\n",
-       "#sk-container-id-2 input.sk-hidden--visually {\n",
+       "#sk-container-id-3 input.sk-hidden--visually {\n",
        "  border: 0;\n",
        "  clip: rect(1px 1px 1px 1px);\n",
        "  clip: rect(1px, 1px, 1px, 1px);\n",
@@ -499,7 +506,7 @@
        "  width: 1px;\n",
        "}\n",
        "\n",
-       "#sk-container-id-2 div.sk-dashed-wrapped {\n",
+       "#sk-container-id-3 div.sk-dashed-wrapped {\n",
        "  border: 1px dashed var(--sklearn-color-line);\n",
        "  margin: 0 0.4em 0.5em 0.4em;\n",
        "  box-sizing: border-box;\n",
@@ -507,7 +514,7 @@
        "  background-color: var(--sklearn-color-background);\n",
        "}\n",
        "\n",
-       "#sk-container-id-2 div.sk-container {\n",
+       "#sk-container-id-3 div.sk-container {\n",
        "  /* jupyter's `normalize.less` sets `[hidden] { display: none; }`\n",
        "     but bootstrap.min.css set `[hidden] { display: none !important; }`\n",
        "     so we also need the `!important` here to be able to override the\n",
@@ -517,7 +524,7 @@
        "  position: relative;\n",
        "}\n",
        "\n",
-       "#sk-container-id-2 div.sk-text-repr-fallback {\n",
+       "#sk-container-id-3 div.sk-text-repr-fallback {\n",
        "  display: none;\n",
        "}\n",
        "\n",
@@ -533,14 +540,14 @@
        "\n",
        "/* Parallel-specific style estimator block */\n",
        "\n",
-       "#sk-container-id-2 div.sk-parallel-item::after {\n",
+       "#sk-container-id-3 div.sk-parallel-item::after {\n",
        "  content: \"\";\n",
        "  width: 100%;\n",
        "  border-bottom: 2px solid var(--sklearn-color-text-on-default-background);\n",
        "  flex-grow: 1;\n",
        "}\n",
        "\n",
-       "#sk-container-id-2 div.sk-parallel {\n",
+       "#sk-container-id-3 div.sk-parallel {\n",
        "  display: flex;\n",
        "  align-items: stretch;\n",
        "  justify-content: center;\n",
@@ -548,28 +555,28 @@
        "  position: relative;\n",
        "}\n",
        "\n",
-       "#sk-container-id-2 div.sk-parallel-item {\n",
+       "#sk-container-id-3 div.sk-parallel-item {\n",
        "  display: flex;\n",
        "  flex-direction: column;\n",
        "}\n",
        "\n",
-       "#sk-container-id-2 div.sk-parallel-item:first-child::after {\n",
+       "#sk-container-id-3 div.sk-parallel-item:first-child::after {\n",
        "  align-self: flex-end;\n",
        "  width: 50%;\n",
        "}\n",
        "\n",
-       "#sk-container-id-2 div.sk-parallel-item:last-child::after {\n",
+       "#sk-container-id-3 div.sk-parallel-item:last-child::after {\n",
        "  align-self: flex-start;\n",
        "  width: 50%;\n",
        "}\n",
        "\n",
-       "#sk-container-id-2 div.sk-parallel-item:only-child::after {\n",
+       "#sk-container-id-3 div.sk-parallel-item:only-child::after {\n",
        "  width: 0;\n",
        "}\n",
        "\n",
        "/* Serial-specific style estimator block */\n",
        "\n",
-       "#sk-container-id-2 div.sk-serial {\n",
+       "#sk-container-id-3 div.sk-serial {\n",
        "  display: flex;\n",
        "  flex-direction: column;\n",
        "  align-items: center;\n",
@@ -587,14 +594,14 @@
        "\n",
        "/* Pipeline and ColumnTransformer style (default) */\n",
        "\n",
-       "#sk-container-id-2 div.sk-toggleable {\n",
+       "#sk-container-id-3 div.sk-toggleable {\n",
        "  /* Default theme specific background. It is overwritten whether we have a\n",
        "  specific estimator or a Pipeline/ColumnTransformer */\n",
        "  background-color: var(--sklearn-color-background);\n",
        "}\n",
        "\n",
        "/* Toggleable label */\n",
-       "#sk-container-id-2 label.sk-toggleable__label {\n",
+       "#sk-container-id-3 label.sk-toggleable__label {\n",
        "  cursor: pointer;\n",
        "  display: flex;\n",
        "  width: 100%;\n",
@@ -607,13 +614,13 @@
        "  gap: 0.5em;\n",
        "}\n",
        "\n",
-       "#sk-container-id-2 label.sk-toggleable__label .caption {\n",
+       "#sk-container-id-3 label.sk-toggleable__label .caption {\n",
        "  font-size: 0.6rem;\n",
        "  font-weight: lighter;\n",
        "  color: var(--sklearn-color-text-muted);\n",
        "}\n",
        "\n",
-       "#sk-container-id-2 label.sk-toggleable__label-arrow:before {\n",
+       "#sk-container-id-3 label.sk-toggleable__label-arrow:before {\n",
        "  /* Arrow on the left of the label */\n",
        "  content: \"▸\";\n",
        "  float: left;\n",
@@ -621,25 +628,25 @@
        "  color: var(--sklearn-color-icon);\n",
        "}\n",
        "\n",
-       "#sk-container-id-2 label.sk-toggleable__label-arrow:hover:before {\n",
+       "#sk-container-id-3 label.sk-toggleable__label-arrow:hover:before {\n",
        "  color: var(--sklearn-color-text);\n",
        "}\n",
        "\n",
        "/* Toggleable content - dropdown */\n",
        "\n",
-       "#sk-container-id-2 div.sk-toggleable__content {\n",
+       "#sk-container-id-3 div.sk-toggleable__content {\n",
        "  display: none;\n",
        "  text-align: left;\n",
        "  /* unfitted */\n",
        "  background-color: var(--sklearn-color-unfitted-level-0);\n",
        "}\n",
        "\n",
-       "#sk-container-id-2 div.sk-toggleable__content.fitted {\n",
+       "#sk-container-id-3 div.sk-toggleable__content.fitted {\n",
        "  /* fitted */\n",
        "  background-color: var(--sklearn-color-fitted-level-0);\n",
        "}\n",
        "\n",
-       "#sk-container-id-2 div.sk-toggleable__content pre {\n",
+       "#sk-container-id-3 div.sk-toggleable__content pre {\n",
        "  margin: 0.2em;\n",
        "  border-radius: 0.25em;\n",
        "  color: var(--sklearn-color-text);\n",
@@ -647,78 +654,78 @@
        "  background-color: var(--sklearn-color-unfitted-level-0);\n",
        "}\n",
        "\n",
-       "#sk-container-id-2 div.sk-toggleable__content.fitted pre {\n",
+       "#sk-container-id-3 div.sk-toggleable__content.fitted pre {\n",
        "  /* unfitted */\n",
        "  background-color: var(--sklearn-color-fitted-level-0);\n",
        "}\n",
        "\n",
-       "#sk-container-id-2 input.sk-toggleable__control:checked~div.sk-toggleable__content {\n",
+       "#sk-container-id-3 input.sk-toggleable__control:checked~div.sk-toggleable__content {\n",
        "  /* Expand drop-down */\n",
        "  display: block;\n",
        "  width: 100%;\n",
        "  overflow: visible;\n",
        "}\n",
        "\n",
-       "#sk-container-id-2 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {\n",
+       "#sk-container-id-3 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {\n",
        "  content: \"▾\";\n",
        "}\n",
        "\n",
        "/* Pipeline/ColumnTransformer-specific style */\n",
        "\n",
-       "#sk-container-id-2 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {\n",
+       "#sk-container-id-3 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {\n",
        "  color: var(--sklearn-color-text);\n",
        "  background-color: var(--sklearn-color-unfitted-level-2);\n",
        "}\n",
        "\n",
-       "#sk-container-id-2 div.sk-label.fitted input.sk-toggleable__control:checked~label.sk-toggleable__label {\n",
+       "#sk-container-id-3 div.sk-label.fitted input.sk-toggleable__control:checked~label.sk-toggleable__label {\n",
        "  background-color: var(--sklearn-color-fitted-level-2);\n",
        "}\n",
        "\n",
        "/* Estimator-specific style */\n",
        "\n",
        "/* Colorize estimator box */\n",
-       "#sk-container-id-2 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {\n",
+       "#sk-container-id-3 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {\n",
        "  /* unfitted */\n",
        "  background-color: var(--sklearn-color-unfitted-level-2);\n",
        "}\n",
        "\n",
-       "#sk-container-id-2 div.sk-estimator.fitted input.sk-toggleable__control:checked~label.sk-toggleable__label {\n",
+       "#sk-container-id-3 div.sk-estimator.fitted input.sk-toggleable__control:checked~label.sk-toggleable__label {\n",
        "  /* fitted */\n",
        "  background-color: var(--sklearn-color-fitted-level-2);\n",
        "}\n",
        "\n",
-       "#sk-container-id-2 div.sk-label label.sk-toggleable__label,\n",
-       "#sk-container-id-2 div.sk-label label {\n",
+       "#sk-container-id-3 div.sk-label label.sk-toggleable__label,\n",
+       "#sk-container-id-3 div.sk-label label {\n",
        "  /* The background is the default theme color */\n",
        "  color: var(--sklearn-color-text-on-default-background);\n",
        "}\n",
        "\n",
        "/* On hover, darken the color of the background */\n",
-       "#sk-container-id-2 div.sk-label:hover label.sk-toggleable__label {\n",
+       "#sk-container-id-3 div.sk-label:hover label.sk-toggleable__label {\n",
        "  color: var(--sklearn-color-text);\n",
        "  background-color: var(--sklearn-color-unfitted-level-2);\n",
        "}\n",
        "\n",
        "/* Label box, darken color on hover, fitted */\n",
-       "#sk-container-id-2 div.sk-label.fitted:hover label.sk-toggleable__label.fitted {\n",
+       "#sk-container-id-3 div.sk-label.fitted:hover label.sk-toggleable__label.fitted {\n",
        "  color: var(--sklearn-color-text);\n",
        "  background-color: var(--sklearn-color-fitted-level-2);\n",
        "}\n",
        "\n",
        "/* Estimator label */\n",
        "\n",
-       "#sk-container-id-2 div.sk-label label {\n",
+       "#sk-container-id-3 div.sk-label label {\n",
        "  font-family: monospace;\n",
        "  font-weight: bold;\n",
        "  line-height: 1.2em;\n",
        "}\n",
        "\n",
-       "#sk-container-id-2 div.sk-label-container {\n",
+       "#sk-container-id-3 div.sk-label-container {\n",
        "  text-align: center;\n",
        "}\n",
        "\n",
        "/* Estimator-specific */\n",
-       "#sk-container-id-2 div.sk-estimator {\n",
+       "#sk-container-id-3 div.sk-estimator {\n",
        "  font-family: monospace;\n",
        "  border: 1px dotted var(--sklearn-color-border-box);\n",
        "  border-radius: 0.25em;\n",
@@ -728,18 +735,18 @@
        "  background-color: var(--sklearn-color-unfitted-level-0);\n",
        "}\n",
        "\n",
-       "#sk-container-id-2 div.sk-estimator.fitted {\n",
+       "#sk-container-id-3 div.sk-estimator.fitted {\n",
        "  /* fitted */\n",
        "  background-color: var(--sklearn-color-fitted-level-0);\n",
        "}\n",
        "\n",
        "/* on hover */\n",
-       "#sk-container-id-2 div.sk-estimator:hover {\n",
+       "#sk-container-id-3 div.sk-estimator:hover {\n",
        "  /* unfitted */\n",
        "  background-color: var(--sklearn-color-unfitted-level-2);\n",
        "}\n",
        "\n",
-       "#sk-container-id-2 div.sk-estimator.fitted:hover {\n",
+       "#sk-container-id-3 div.sk-estimator.fitted:hover {\n",
        "  /* fitted */\n",
        "  background-color: var(--sklearn-color-fitted-level-2);\n",
        "}\n",
@@ -830,7 +837,7 @@
        "\n",
        "/* \"?\"-specific style due to the `<a>` HTML tag */\n",
        "\n",
-       "#sk-container-id-2 a.estimator_doc_link {\n",
+       "#sk-container-id-3 a.estimator_doc_link {\n",
        "  float: right;\n",
        "  font-size: 1rem;\n",
        "  line-height: 1em;\n",
@@ -845,7 +852,7 @@
        "  border: var(--sklearn-color-unfitted-level-1) 1pt solid;\n",
        "}\n",
        "\n",
-       "#sk-container-id-2 a.estimator_doc_link.fitted {\n",
+       "#sk-container-id-3 a.estimator_doc_link.fitted {\n",
        "  /* fitted */\n",
        "  background-color: var(--sklearn-color-fitted-level-0);\n",
        "  border: var(--sklearn-color-fitted-level-1) 1pt solid;\n",
@@ -853,14 +860,14 @@
        "}\n",
        "\n",
        "/* On hover */\n",
-       "#sk-container-id-2 a.estimator_doc_link:hover {\n",
+       "#sk-container-id-3 a.estimator_doc_link:hover {\n",
        "  /* unfitted */\n",
        "  background-color: var(--sklearn-color-unfitted-level-3);\n",
        "  color: var(--sklearn-color-background);\n",
        "  text-decoration: none;\n",
        "}\n",
        "\n",
-       "#sk-container-id-2 a.estimator_doc_link.fitted:hover {\n",
+       "#sk-container-id-3 a.estimator_doc_link.fitted:hover {\n",
        "  /* fitted */\n",
        "  background-color: var(--sklearn-color-fitted-level-3);\n",
        "}\n",
@@ -997,7 +1004,7 @@
        "    height: 14px;\n",
        "    cursor: pointer;\n",
        "}\n",
-       "</style><body><div id=\"sk-container-id-2\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>KNeighborsClassifier(n_neighbors=1)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-2\" type=\"checkbox\" checked><label for=\"sk-estimator-id-2\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow\"><div><div>KNeighborsClassifier</div></div><div><a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.8/modules/generated/sklearn.neighbors.KNeighborsClassifier.html\">?<span>Documentation for KNeighborsClassifier</span></a><span class=\"sk-estimator-doc-link fitted\">i<span>Fitted</span></span></div></label><div class=\"sk-toggleable__content fitted\" data-param-prefix=\"\">\n",
+       "</style><body><div id=\"sk-container-id-3\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>KNeighborsClassifier(n_neighbors=1)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-3\" type=\"checkbox\" checked><label for=\"sk-estimator-id-3\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow\"><div><div>KNeighborsClassifier</div></div><div><a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.8/modules/generated/sklearn.neighbors.KNeighborsClassifier.html\">?<span>Documentation for KNeighborsClassifier</span></a><span class=\"sk-estimator-doc-link fitted\">i<span>Fitted</span></span></div></label><div class=\"sk-toggleable__content fitted\" data-param-prefix=\"\">\n",
        "        <div class=\"estimator-table\">\n",
        "            <details>\n",
        "                <summary>Parameters</summary>\n",
@@ -1250,19 +1257,30 @@
        "    }\n",
        "}\n",
        "\n",
-       "forceTheme('sk-container-id-2');</script></body>"
+       "forceTheme('sk-container-id-3');</script></body>"
       ],
       "text/plain": [
        "KNeighborsClassifier(n_neighbors=1)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "print(knn.fit(X_train, y_train))\n",
     "knn.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0ef9f9ce",
+   "metadata": {},
+   "source": [
+    "![knn-fit](img/knn-fit.png)\n",
+    "\n",
+    "`fit`方法返回的是knn对象本身并作原处修改，因此我们得到了分类器的字符串表示。"
    ]
   }
  ],
