--- a/ML/PythonMLBasic/ch1/iris.ipynb
+++ b/ML/PythonMLBasic/ch1/iris.ipynb
@@ -1282,6 +1282,127 @@
     "\n",
     "`fit`方法返回的是knn对象本身并作原处修改，因此我们得到了分类器的字符串表示。"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d59ce3b5",
+   "metadata": {},
+   "source": [
+    "## 1.7.5 做出预测\n",
+    "\n",
+    "假设，我们在野外发现了一朵鸢尾花，花萼长5cm宽2.9cm，花瓣长1cm宽0.2cm，将这些数据放在一个NumPy数组中，再次计算形状，数组形状为样本数(1)乘以特征数(4)："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "346e93c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X_new.shape: (1, 4)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "X_new = np.array([[5.0, 2.9, 1.0, 0.2]])  # 这里将花的测量数据转换为二维NumPy数组的一行，因为scikit-learn的输入数据必须是二维数组\n",
+    "print(\"X_new.shape: {}\".format(X_new.shape))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "bd6bfccf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prediction: [0]\n",
+      "Predicted target name: ['setosa']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 下面调用knn对象的predict方法来进行预测：\n",
+    "prediction = knn.predict(X_new)\n",
+    "print(\"Prediction: {}\".format(prediction))\n",
+    "print(\"Predicted target name: {}\".format(iris_dataset['target_names'][prediction]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c3cdb723",
+   "metadata": {},
+   "source": [
+    "## 1.7.6 评估模型\n",
+    "\n",
+    "上一节根据模型预测这朵新的鸢尾花属于类别0，也就是属于setosa品种，但如何评估（相信）这个模型，需要用到之前创建的测试集。这些数据没有用于构建模型，但我们知道测试集中每朵鸢尾花的实际品种。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "ec281aae",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test set prediction:\n",
+      " [2 1 0 2 0 2 0 1 1 1 2 1 1 1 1 0 1 1 0 0 2 1 0 0 2 0 0 1 1 0 2 1 0 2 2 1 0\n",
+      " 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 对测试数据中的每朵鸢尾花进行预测，并将预测结果与标签（已知的品种）进行对比，可以通过计算精度(accuracy)来衡量模型的优劣，精度即品种预测正确的花所占的比例：\n",
+    "y_pred = knn.predict(X_test)\n",
+    "print(\"Test set prediction:\\n {}\".format(y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "6b1f9235",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test set score: 0.97\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Test set score: {:.2f}\".format(np.mean(y_pred == y_test)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "c4b37271",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test set score: 0.97\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 另外，还可以使用knn对象的score方法来计算测试集的精度：\n",
+    "print(\"Test set score: {:.2f}\".format(knn.score(X_test, y_test)))"
+   ]
   }
  ],
  "metadata": {
