--- a/ML/PythonMLBasic/ch2/2.3_supervised-learning-algorithm.ipynb
+++ b/ML/PythonMLBasic/ch2/2.3_supervised-learning-algorithm.ipynb
@@ -10,12 +10,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "id": "405c543a",
    "metadata": {},
    "outputs": [],
    "source": [
     "# 导入需要的库\n",
+    "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import mglearn"
    ]
@@ -26,6 +27,14 @@
    "metadata": {},
    "source": [
     "### 2.3.1 一些样本数据集"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2b1d465f",
+   "metadata": {},
+   "source": [
+    "#### 2.3.1.1 forge数据集：二分类数据集"
    ]
   },
   {
@@ -67,6 +76,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3a5301dc",
+   "metadata": {},
+   "source": [
+    "#### 2.3.1.2 wave数据集：回归算法"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "id": "9c66f456",
@@ -101,6 +118,279 @@
     "plt.ylabel(\"Target\")\n",
     "plt.title(\"wave dataset\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "16f48b90",
+   "metadata": {},
+   "source": [
+    "#### 2.3.1.3 cancer数据集：威斯康星州乳腺癌数据集 (分类算法)\n",
+    "\n",
+    "每个肿瘤都被标记为“良性”(benign，表示无害肿瘤)或“恶性”(malignant，表示癌性肿瘤)，模型的任务是基于人体组织的测量数据来学习预测肿瘤是否为恶性。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "a0004ac0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cancer.keys(): \n",
+      "dict_keys(['data', 'target', 'frame', 'target_names', 'DESCR', 'feature_names', 'filename', 'data_module'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 用scikit-learn模块的load_breast_cancer函数来加载数据\n",
+    "from sklearn.datasets import load_breast_cancer\n",
+    "cancer = load_breast_cancer()\n",
+    "print(\"cancer.keys(): \\n{}\".format(cancer.keys()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "b1fb8851",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cancer.data.shape: (569, 30)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# cancer数据集共包含569个数据点，每个数据点有30个特征\n",
+    "print(\"cancer.data.shape: {}\".format(cancer.data.shape))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "a74ff9ad",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sample counts per class:\n",
+      "{np.str_('malignant'): np.int64(212), np.str_('benign'): np.int64(357)}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 在369个数据点中，212个被标记为恶性，357个被标记为良性\n",
+    "print(\"Sample counts per class:\\n{}\".format(\n",
+    "    {n: v for n, v in zip(cancer.target_names, np.bincount(cancer.target))}\n",
+    "))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "9acc7c78",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Feature names:\n",
+      "['mean radius' 'mean texture' 'mean perimeter' 'mean area'\n",
+      " 'mean smoothness' 'mean compactness' 'mean concavity'\n",
+      " 'mean concave points' 'mean symmetry' 'mean fractal dimension'\n",
+      " 'radius error' 'texture error' 'perimeter error' 'area error'\n",
+      " 'smoothness error' 'compactness error' 'concavity error'\n",
+      " 'concave points error' 'symmetry error' 'fractal dimension error'\n",
+      " 'worst radius' 'worst texture' 'worst perimeter' 'worst area'\n",
+      " 'worst smoothness' 'worst compactness' 'worst concavity'\n",
+      " 'worst concave points' 'worst symmetry' 'worst fractal dimension']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 通过feature_names属性可以了解每个特征的语义说明\n",
+    "print(\"Feature names:\\n{}\".format(cancer.feature_names))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cae797ee",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Feature description:\n",
+      ".. _breast_cancer_dataset:\n",
+      "\n",
+      "Breast cancer Wisconsin (diagnostic) dataset\n",
+      "--------------------------------------------\n",
+      "\n",
+      "**Data Set Characteristics:**\n",
+      "\n",
+      ":Number of Instances: 569\n",
+      "\n",
+      ":Number of Attributes: 30 numeric, predictive attributes and the class\n",
+      "\n",
+      ":Attribute Information:\n",
+      "    - radius (mean of distances from center to points on the perimeter)\n",
+      "    - texture (standard deviation of gray-scale values)\n",
+      "    - perimeter\n",
+      "    - area\n",
+      "    - smoothness (local variation in radius lengths)\n",
+      "    - compactness (perimeter^2 / area - 1.0)\n",
+      "    - concavity (severity of concave portions of the contour)\n",
+      "    - concave points (number of concave portions of the contour)\n",
+      "    - symmetry\n",
+      "    - fractal dimension (\"coastline approximation\" - 1)\n",
+      "\n",
+      "    The mean, standard error, and \"worst\" or largest (mean of the three\n",
+      "    worst/largest values) of these features were computed for each image,\n",
+      "    resulting in 30 features.  For instance, field 0 is Mean Radius, field\n",
+      "    10 is Radius SE, field 20 is Worst Radius.\n",
+      "\n",
+      "    - class:\n",
+      "            - WDBC-Malignant\n",
+      "            - WDBC-Benign\n",
+      "\n",
+      ":Summary Statistics:\n",
+      "\n",
+      "===================================== ====== ======\n",
+      "                                        Min    Max\n",
+      "===================================== ====== ======\n",
+      "radius (mean):                        6.981  28.11\n",
+      "texture (mean):                       9.71   39.28\n",
+      "perimeter (mean):                     43.79  188.5\n",
+      "area (mean):                          143.5  2501.0\n",
+      "smoothness (mean):                    0.053  0.163\n",
+      "compactness (mean):                   0.019  0.345\n",
+      "concavity (mean):                     0.0    0.427\n",
+      "concave points (mean):                0.0    0.201\n",
+      "symmetry (mean):                      0.106  0.304\n",
+      "fractal dimension (mean):             0.05   0.097\n",
+      "radius (standard error):              0.112  2.873\n",
+      "texture (standard error):             0.36   4.885\n",
+      "perimeter (standard error):           0.757  21.98\n",
+      "area (standard error):                6.802  542.2\n",
+      "smoothness (standard error):          0.002  0.031\n",
+      "compactness (standard error):         0.002  0.135\n",
+      "concavity (standard error):           0.0    0.396\n",
+      "concave points (standard error):      0.0    0.053\n",
+      "symmetry (standard error):            0.008  0.079\n",
+      "fractal dimension (standard error):   0.001  0.03\n",
+      "radius (worst):                       7.93   36.04\n",
+      "texture (worst):                      12.02  49.54\n",
+      "perimeter (worst):                    50.41  251.2\n",
+      "area (worst):                         185.2  4254.0\n",
+      "smoothness (worst):                   0.071  0.223\n",
+      "compactness (worst):                  0.027  1.058\n",
+      "concavity (worst):                    0.0    1.252\n",
+      "concave points (worst):               0.0    0.291\n",
+      "symmetry (worst):                     0.156  0.664\n",
+      "fractal dimension (worst):            0.055  0.208\n",
+      "===================================== ====== ======\n",
+      "\n",
+      ":Missing Attribute Values: None\n",
+      "\n",
+      ":Class Distribution: 212 - Malignant, 357 - Benign\n",
+      "\n",
+      ":Creator:  Dr. William H. Wolberg, W. Nick Street, Olvi L. Mangasarian\n",
+      "\n",
+      ":Donor: Nick Street\n",
+      "\n",
+      ":Date: November, 1995\n",
+      "\n",
+      "This is a copy of UCI ML Breast Cancer Wisconsin (Diagnostic) datasets.\n",
+      "https://goo.gl/U2Uwz2\n",
+      "\n",
+      "Features are computed from a digitized image of a fine needle\n",
+      "aspirate (FNA) of a breast mass.  They describe\n",
+      "characteristics of the cell nuclei present in the image.\n",
+      "\n",
+      "Separating plane described above was obtained using\n",
+      "Multisurface Method-Tree (MSM-T) [K. P. Bennett, \"Decision Tree\n",
+      "Construction Via Linear Programming.\" Proceedings of the 4th\n",
+      "Midwest Artificial Intelligence and Cognitive Science Society,\n",
+      "pp. 97-101, 1992], a classification method which uses linear\n",
+      "programming to construct a decision tree.  Relevant features\n",
+      "were selected using an exhaustive search in the space of 1-4\n",
+      "features and 1-3 separating planes.\n",
+      "\n",
+      "The actual linear program used to obtain the separating plane\n",
+      "in the 3-dimensional space is that described in:\n",
+      "[K. P. Bennett and O. L. Mangasarian: \"Robust Linear\n",
+      "Programming Discrimination of Two Linearly Inseparable Sets\",\n",
+      "Optimization Methods and Software 1, 1992, 23-34].\n",
+      "\n",
+      "This database is also available through the UW CS ftp server:\n",
+      "\n",
+      "ftp ftp.cs.wisc.edu\n",
+      "cd math-prog/cpo-dataset/machine-learn/WDBC/\n",
+      "\n",
+      ".. dropdown:: References\n",
+      "\n",
+      "  - W.N. Street, W.H. Wolberg and O.L. Mangasarian. Nuclear feature extraction\n",
+      "    for breast tumor diagnosis. IS&T/SPIE 1993 International Symposium on\n",
+      "    Electronic Imaging: Science and Technology, volume 1905, pages 861-870,\n",
+      "    San Jose, CA, 1993.\n",
+      "  - O.L. Mangasarian, W.N. Street and W.H. Wolberg. Breast cancer diagnosis and\n",
+      "    prognosis via linear programming. Operations Research, 43(4), pages 570-577,\n",
+      "    July-August 1995.\n",
+      "  - W.H. Wolberg, W.N. Street, and O.L. Mangasarian. Machine learning techniques\n",
+      "    to diagnose breast cancer from fine-needle aspirates. Cancer Letters 77 (1994)\n",
+      "    163-171.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 通过cancer.DESCR属性可以了解数据的更多信息\n",
+    "print(\"Feature description:\\n{}\".format(cancer.DESCR))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "52a757df",
+   "metadata": {},
+   "source": [
+    "#### 2.3.1.4 波士顿房价数据集（回归算法）\n",
+    "\n",
+    "与此数据集相关的任务是，利用犯罪率、是否邻近查尔斯河、公路可达性等信息，来预测20世纪70年代波士顿地区房屋价格的中位数"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "d8c854f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "\n`load_boston` has been removed from scikit-learn since version 1.2.\n\nThe Boston housing prices dataset has an ethical problem: as\ninvestigated in [1], the authors of this dataset engineered a\nnon-invertible variable \"B\" assuming that racial self-segregation had a\npositive impact on house prices [2]. Furthermore the goal of the\nresearch that led to the creation of this dataset was to study the\nimpact of air quality but it did not give adequate demonstration of the\nvalidity of this assumption.\n\nThe scikit-learn maintainers therefore strongly discourage the use of\nthis dataset unless the purpose of the code is to study and educate\nabout ethical issues in data science and machine learning.\n\nIn this special case, you can fetch the dataset from the original\nsource::\n\n    import pandas as pd\n    import numpy as np\n\n    data_url = \"http://lib.stat.cmu.edu/datasets/boston\"\n    raw_df = pd.read_csv(data_url, sep=\"\\s+\", skiprows=22, header=None)\n    data = np.hstack([raw_df.values[::2, :], raw_df.values[1::2, :2]])\n    target = raw_df.values[1::2, 2]\n\nAlternative datasets include the California housing dataset and the\nAmes housing dataset. You can load the datasets as follows::\n\n    from sklearn.datasets import fetch_california_housing\n    housing = fetch_california_housing()\n\nfor the California housing dataset and::\n\n    from sklearn.datasets import fetch_openml\n    housing = fetch_openml(name=\"house_prices\", as_frame=True)\n\nfor the Ames housing dataset.\n\n[1] M Carlisle.\n\"Racist data destruction?\"\n<https://medium.com/@docintangible/racist-data-destruction-113e3eff54a8>\n\n[2] Harrison Jr, David, and Daniel L. Rubinfeld.\n\"Hedonic housing prices and the demand for clean air.\"\nJournal of environmental economics and management 5.1 (1978): 81-102.\n<https://www.researchgate.net/publication/4974606_Hedonic_housing_prices_and_the_demand_for_clean_air>\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mImportError\u001b[39m                               Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[25]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# 波士顿房价数据集包含506个数据点和13个特征\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msklearn\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mdatasets\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m load_boston\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\v0cn037\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\sklearn\\datasets\\__init__.py:164\u001b[39m, in \u001b[36m__getattr__\u001b[39m\u001b[34m(name)\u001b[39m\n\u001b[32m    113\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m name == \u001b[33m\"\u001b[39m\u001b[33mload_boston\u001b[39m\u001b[33m\"\u001b[39m:\n\u001b[32m    114\u001b[39m     msg = textwrap.dedent(\n\u001b[32m    115\u001b[39m \u001b[38;5;250m        \u001b[39m\u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m    116\u001b[39m \u001b[33;03m        `load_boston` has been removed from scikit-learn since version 1.2.\u001b[39;00m\n\u001b[32m   (...)\u001b[39m\u001b[32m    162\u001b[39m \u001b[33;03m        \"\"\"\u001b[39;00m\n\u001b[32m    163\u001b[39m     )\n\u001b[32m--> \u001b[39m\u001b[32m164\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mImportError\u001b[39;00m(msg)\n\u001b[32m    165\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m    166\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mglobals\u001b[39m()[name]\n",
+      "\u001b[31mImportError\u001b[39m: \n`load_boston` has been removed from scikit-learn since version 1.2.\n\nThe Boston housing prices dataset has an ethical problem: as\ninvestigated in [1], the authors of this dataset engineered a\nnon-invertible variable \"B\" assuming that racial self-segregation had a\npositive impact on house prices [2]. Furthermore the goal of the\nresearch that led to the creation of this dataset was to study the\nimpact of air quality but it did not give adequate demonstration of the\nvalidity of this assumption.\n\nThe scikit-learn maintainers therefore strongly discourage the use of\nthis dataset unless the purpose of the code is to study and educate\nabout ethical issues in data science and machine learning.\n\nIn this special case, you can fetch the dataset from the original\nsource::\n\n    import pandas as pd\n    import numpy as np\n\n    data_url = \"http://lib.stat.cmu.edu/datasets/boston\"\n    raw_df = pd.read_csv(data_url, sep=\"\\s+\", skiprows=22, header=None)\n    data = np.hstack([raw_df.values[::2, :], raw_df.values[1::2, :2]])\n    target = raw_df.values[1::2, 2]\n\nAlternative datasets include the California housing dataset and the\nAmes housing dataset. You can load the datasets as follows::\n\n    from sklearn.datasets import fetch_california_housing\n    housing = fetch_california_housing()\n\nfor the California housing dataset and::\n\n    from sklearn.datasets import fetch_openml\n    housing = fetch_openml(name=\"house_prices\", as_frame=True)\n\nfor the Ames housing dataset.\n\n[1] M Carlisle.\n\"Racist data destruction?\"\n<https://medium.com/@docintangible/racist-data-destruction-113e3eff54a8>\n\n[2] Harrison Jr, David, and Daniel L. Rubinfeld.\n\"Hedonic housing prices and the demand for clean air.\"\nJournal of environmental economics and management 5.1 (1978): 81-102.\n<https://www.researchgate.net/publication/4974606_Hedonic_housing_prices_and_the_demand_for_clean_air>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 波士顿房价数据集包含506个数据点和13个特征\n",
+    "from sklearn.datasets import load_boston"
    ]
   }
  ],
